@@ -1,5 +1,9 @@
 2010-10-18  Miloslav Trmač  <mitr@redhat.com>
 
+	* src/volume_key.c (pos_interact): Split from pos_init ().
+	(do_save, do_reencrypt): Call pos_init () as early as possible.  Use
+	pos_interact () at the original location.
+
 	* lib/volume_luks.c (luks_apply_secret)
 	* src/volume_key.c (pos_interact): Only tell the user about an incorrect
 	passphrase once.
